<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ghi</groupId>
    <artifactId>dbsyncer</artifactId>
    <version>2.0.8</version>
    <packaging>pom</packaging>
    <name>dbsyncer</name>
    <url>https://gitee.com/ghi/dbsyncer</url>

    <modules>
        <module>dbsyncer-biz</module>
        <module>dbsyncer-common</module>
        <module>dbsyncer-connector</module>
        <module>dbsyncer-manager</module>
        <module>dbsyncer-parser</module>
        <module>dbsyncer-plugin</module>
        <module>dbsyncer-sdk</module>
        <module>dbsyncer-storage</module>
        <module>dbsyncer-web</module>
    </modules>

    <!-- 全局参数版本 -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <java.version>21</java.version>
        <spring-boot.version>3.5.3</spring-boot.version>
        <commons-fileupload.version>1.4</commons-fileupload.version>
        <commons-io.version>2.7</commons-io.version>
        <commons-codec.version>1.15</commons-codec.version>
        <lucene-analyzers-smartcn.version>8.8.0</lucene-analyzers-smartcn.version>
        <ojdbc8.version>21.6.0.0</ojdbc8.version>
        <!--<mysql.version>5.1.40</mysql.version>-->
        <mysql.version>8.0.21</mysql.version>
        <jts-core.version>1.19.0</jts-core.version>
        <mysql-binlog.version>0.30.1</mysql-binlog.version>
        <mssql-jdbc.version>12.6.0.jre11</mssql-jdbc.version>
        <antlr4-runtime.version>4.7.2</antlr4-runtime.version>
        <postgresql.version>42.3.3</postgresql.version>
        <postgis-jdbc.version>2.5.1</postgis-jdbc.version>
        <kafka.version>0.11.0.0</kafka.version>
        <fastjson2.version>2.0.22</fastjson2.version>
        <protobuf.version>3.21.1</protobuf.version>


        <jsql-parse.version>4.9</jsql-parse.version>
    </properties>

    <!-- 镜像仓库地址 -->
    <repositories>
        <!-- 阿里云仓库 -->
        <repository>
            <id>ali</id>
            <name>ali Repository</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <!-- DataNucleus仓库 (offline) -->
        <!--
        <repository>
            <id>datanucleus</id>
            <url>http://www.datanucleus.org/downloads/maven2/</url>
        </repository>
        -->

        <!-- atlassian仓库 -->
        <repository>
            <id>atlassian-public</id>
            <url>https://packages.atlassian.com/mvn/maven-external/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
        </repository>

    </repositories>

    <!-- 统一管理第三方依赖jar -->
    <dependencyManagement>
        <dependencies>
            <!-- Import dependency management from Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Apache Commons 工具类 -->
            <dependency>
                <groupId>commons-fileupload</groupId>
                <artifactId>commons-fileupload</artifactId>
                <version>${commons-fileupload.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>

            <!-- fastjson2 -->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>

            <!-- protobuf -->
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>

            <!-- smartcn中文分词器 -->
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-analyzers-smartcn</artifactId>
                <version>${lucene-analyzers-smartcn.version}</version>
            </dependency>

            <!-- mysql-driver -->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.locationtech.jts</groupId>
                <artifactId>jts-core</artifactId>
                <version>${jts-core.version}</version>
            </dependency>

            <!-- oracle-driver -->
            <dependency>
                <groupId>com.oracle.database.jdbc</groupId>
                <artifactId>ojdbc8</artifactId>
                <version>${ojdbc8.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.nls</groupId>
                <artifactId>orai18n</artifactId>
                <version>${ojdbc8.version}</version>
            </dependency>

            <!-- sqlserver-driver -->
            <dependency>
                <groupId>com.microsoft.sqlserver</groupId>
                <artifactId>mssql-jdbc</artifactId>
                <version>${mssql-jdbc.version}</version>
            </dependency>

            <!-- antlr4-runtime -->
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-runtime</artifactId>
                <version>${antlr4-runtime.version}</version>
            </dependency>

            <!-- postgresql -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>

            <dependency>
                <groupId>net.postgis</groupId>
                <artifactId>postgis-jdbc</artifactId>
                <version>${postgis-jdbc.version}</version>
            </dependency>

            <dependency>
                <groupId>com.zendesk</groupId>
                <artifactId>mysql-binlog-connector-java</artifactId>
                <version>${mysql-binlog.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.github.luben</groupId>
                        <artifactId>zstd-jni</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.apache.kafka</groupId>
                <artifactId>kafka-clients</artifactId>
                <version>${kafka.version}</version>
            </dependency>

            <!-- log4j -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>

            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>

            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-to-slf4j</artifactId>

            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>

            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-jul</artifactId>

            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.11.4</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.vintage</groupId>
                <artifactId>junit-vintage-engine</artifactId>
                <version>5.11.4</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
            </dependency>

            <dependency>
                <groupId>jakarta.servlet</groupId>
                <artifactId>jakarta.servlet-api</artifactId>
                <version>6.0.0</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.github.jsqlparser</groupId>
                <artifactId>jsqlparser</artifactId>
                <version>${jsql-parse.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
    </build>

</project>